@@ -5,6 +5,7 @@
 	* bugfix: remove duplicate flags when changing user flags (closes: #0004)
 	* bugfix: no more possible to change user_slots/leech_slots for non-gadmins
 	* bugfix: unable to delete file after failed upload (closes: #0008)
+	* bugfix: free space is taken from drive c: (closes: #0001, #0009)
 	* feature: site chmod now accepts string version of permissions
 
 2004-09-13  Pierre Chifflier  <pollux@cpe.fr>
